Switch to MongoDB Atlas and use env variable for URI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # === MongoDB Configuration ===
-spring.data.mongodb.uri=mongodb+srv://ahmadkaz29:8MgTLPkrbHamSl8q@cluster0.objfmnt.mongodb.net/recipeapi?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=${MONGO_URL}
+
+
 
 
 
